--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "datatables.net": "^2.0.0",
         "jquery": "^3.7.1",
         "jquery-datatables": "^1.10.18",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0.0",
         "popper.js": "^1.14.3",
         "resolve-url-loader": "^4.0.0",
